* index.html: Added note about serialization dumper.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -72,6 +72,17 @@ i
 <table>
 
 <tr><td valign="top">
+<b>November 2, 2000</b>
+</td><td>
+Warren Levy has checked in code for a serialized object dumper.
+It is enabled by configuring with <tt>--enable-libgcj-debug</tt>
+and calling <tt>java.io.ObjectInputStream.setDump(true);</tt>
+in your test program.
+The output will be generated as the object is deserialized (i.e. the
+<tt>readObject()</tt> method is executed).
+</td></tr>
+
+<tr><td valign="top">
 <b>October 29, 2000</b>
 </td><td>
 Bryce McKinlay checked in a large patch merging parts of the Java
@@ -187,7 +198,7 @@ href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: index.html,v 1.50 2000/10/04 02:17:15 bryce Exp $
+$Id: index.html,v 1.51 2000/10/29 20:01:03 tromey Exp $
 </small>
 </address>
 
