--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -75,9 +75,12 @@ be completed before GCC 3.0 is released:
        GCC 3.0 release.</p>
 <li><p>Installation Documentation</p>
     <p>Merge <a href="http://gcc.gnu.org/install">on-line installation
-       documentation</a>, <code>gcc/INSTALL</code>, and <a
-       href="http://gcc.gnu.org/onlinedocs/gcc_3.html#SEC50">some more
-       on-line installation documentation</a>.</p>
+       documentation</a>, <code>gcc/install.texi</code>, past changes
+       to <code>gcc/INSTALL</code> made in the CVS tree without
+       realising that it was a generated file that were subsequently
+       overridden when it was regenerated, the old system-specific
+       <code>gcc/README.*</code> files, and
+       <code>gcc/f/g77install.texi</code>.</p>
 </ul>
 
 <h2>Platform Support</h2>
