Fix markup (<p> vs </p>).

--- a/htdocs/proj-cpplib.html
+++ b/htdocs/proj-cpplib.html
@@ -19,12 +19,13 @@ mandatory for GCC 3.0.</p>
 
 <p>Testing is not really necessary, unless you are prepared to test
 configurations with <code>--enable-c-cpplib</code>.  If you do this,
-be prepared for odd glitches - see below for the list of known problems.<p>
+be prepared for odd glitches - see below for the list of known problems.
+</p>
 
 <p>The best thing to test with the integrated preprocessor is large
 packages that (ab)use the preprocessor heavily.  The compiler itself
 is pretty good at that, but doesn't cover all the bases.  If you've
-got cycles to burn, please try one or more of:<p>
+got cycles to burn, please try one or more of:</p>
 
 <ul>
   <li>BSD 'make world'
