* c99status.html: Header names now compliant.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -268,8 +268,8 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>relaxed restrictions on portable header names</em></td>
+    <td></td><td>Done</td>
     <td></td><td></td>
-    <td>Broken</td><td></td>
 </tr>
 
 <tr><td><em><code>return</code> without expression not permitted
