Remove bgcolor attributes that get overridden by identical ones in style.mhtml.

--- a/htdocs/gccmission.html
+++ b/htdocs/gccmission.html
@@ -4,7 +4,7 @@
 <title>GCC Development Mission Statement (1999-04-22)</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <h1 align="center">GCC Development Mission Statement (1999-04-22)</h1>
 
