--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -4,7 +4,7 @@
 <title>GCC Home Page</title>
 </head>
 
-<body bgcolor="white" text="black" link="#0000EE" vlink="#551A8B" alink="red">
+<body>
 
 <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2">
 <TR>
