Move all projects web pages to the projects/ subdirectory.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,7 +66,7 @@
 <P>
 <A HREF="contribute.html">Contributing</A><BR>
 <A HREF="contributewhy.html">...Why?</A><BR>
-<A HREF="projects.html">Open projects</A><BR>
+<A HREF="projects/">Open projects</A><BR>
 <A HREF="frontends.html">Front-ends</A><BR>
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
