--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -12,12 +12,12 @@ to do with the optimizer.  Some are old ideas which might not help
 very much anymore, but who knows?
 
 <p>There is a separate page for <a
-href="projects/bp/main.html">Bounds Checking with Bounded Pointers</a>.
+href="bp/main.html">Bounds Checking with Bounded Pointers</a>.
 
 <p>There is a separate project list for the <a
-href="projects/cpplib.html">C preprocessor</a>.
+href="cpplib.html">C preprocessor</a>.
 
-<p>We also have a page detailing <a href="proj-optimize.html">optimizer
+<p>We also have a page detailing <a href="optimize.html">optimizer
 inadequacies</a>, if you'd prefer to think about it in terms of problems
 instead of features.
 
@@ -27,7 +27,7 @@ instead of features.
 number of library changes; these have to be provided by the C library,
 and not by gcc.  In addition, there are also changes to the language
 proper, and some compiler support is needed for the new library
-features.  An <a href="c99status.html">overview</a> of the C99
+features.  An <a href="../c99status.html">overview</a> of the C99
 implementation status is available.</p>
 
 <h2>Haifa scheduler</h2> (haifa-sched.c, loop.[ch], unroll.c, genattrtab.c):
