* index.html: Update with recent CPP news.        * news.html: Rotate from main page.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -150,6 +150,21 @@ hope to release by the end of the year.
 
 <dl>
 
+<dt><b>November 2, 2000</b></dt>
+<dd>
+The C, C++ and Objective C front-ends to GCC now use an integrated
+preprocessor by default.  If all goes well, this will also be the
+default mode for GCC 3.0.
+</dd>
+
+<dt><b>November 1, 2000</b></dt>
+<dd>
+Support for C99's <code>_Pragma</code> operator has been added to the
+preprocessor.  This feature effectively makes it possible to have
+<code>#pragma</code> directives be part of macro expansions, and to
+have their arguments expanded too if necessary.
+</dd>
+
 <dt><b>October 6, 2000</b></dt>
 <dd>
 We would like to point out that GCC 2.96 is not a formal GCC release nor
@@ -171,19 +186,6 @@ because it will not have to do lexical analysis twice, nor save the
 preprocessed output to a temporary file.  In the future, this will
 permit better error messages, and more detailed debugging information
 particularly when complex macros are used.</p>
-</dd>
-
-<dt><b>Sep 11, 2000</b></dt>
-<dd>
-Neil Booth has contributed a new lexer and macro-expander for the C
-preprocessor.  The lexer makes a single pass over the source files,
-whereas previously it made two.  The macro expander operates on
-lexical tokens instead of text strings.
-
-<p>ISO C, C++, and Objective C use the new preprocessor.  Traditional
-(K+R) C, Fortran, and Chill use an older implementation (taken from
-GCC 1) which obeys the rules for pre-standard C preprocessing.  Either
-version may be used to preprocess assembly language.</p>
 </dd>
 
 </dl>
