--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -11,6 +11,19 @@
 home page</a>.
 
 <dl>
+<dt><b>Sep 11, 2000</b></dt>
+<dd>
+Neil Booth has contributed a new lexer and macro-expander for the C
+preprocessor.  The lexer makes a single pass over the source files,
+whereas previously it made two.  The macro expander operates on
+lexical tokens instead of text strings.
+
+<p>ISO C, C++, and Objective C use the new preprocessor.  Traditional
+(K+R) C, Fortran, and Chill use an older implementation (taken from
+GCC 1) which obeys the rules for pre-standard C preprocessing.  Either
+version may be used to preprocess assembly language.</p>
+</dd>
+
 <dt><b>May 2, 2000</b></dt>
 <dd>
 <p>Stan Cox and Jason Eckhardt of Cygnus, a Red Hat company, have
