Remove fsf-forms/* and update contribute.html accordingly.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -23,47 +23,23 @@ contributions must meet.</p>
   Standards</a>.  There are also some <a
   href="codingconventions.html">additional coding conventions for
   GCC</a>.  Submissions which do not conform to the standards will be
-  returned with a request to reformat the changes.
+  returned with a request to reformat the changes.</p>
+
 
 <h2>Copyright Assignment</h2>
 
-  <p>Before we can accept code contributions from you, we need a
-  copyright assignment form filled out.
+<p>Before we can accept code contributions from you, we need a
+copyright assignment form filled out and filed with the FSF.</p>
 
-  <ul>
-   <li>If you've developed some addition or patch to GCC
-   that you would like to contribute, you should fill out a <a
-   href="fsf-forms/assignment-instructions.html">copyright assignment
-   form</a> and send it in to the FSF.  We are unable to use code from
-   you until this is on-file at the FSF, so get that paperwork in!
-   This form covers one batch of changes.
+<p><a href="http://www.gnu.org/prep/maintain.html#SEC6">See some
+documentation by the FSF</a> for details and contact us (either via
+the <a href="mailto:gcc@gcc.gnu.org">gcc@gcc.gnu.org</a> list or the
+GCC maintainer that is taking care of your contributions) to obtain
+the relevant forms.</p>
 
-   <li>
-   If you think you're going to be doing continuing work on GCC
-   (including gcc, g++, g77, Objective C, libstdc++, etc.), it would
-   be easier to use a different form, which arranges to assign the
-   copyright for all your future changes to GCC.  It is called <a
-   href="fsf-forms/assign.future">assign.future</a>.  Please note that
-   if you switch employers, the new employer will need to fill out the
-   <a href=fsf-forms/disclaim.future>disclaim.future</a> form; there
-   is no need to fill out the assign.future form again.
+<p>Small changes can be accepted without a copyright assignment form
+on file.</p>
 
-   <li>There are several <a href="fsf-forms/copyrights.html">other forms
-   you can fill out</a> for different circumstances (e.g. to contribute
-   an entirely new program, to contribute significant changes to a
-   manual, etc.)
-
-   <li>Small changes can be accepted without a copyright assignment form
-   on file.
-
-   <li>This is pretty confusing!  If you are unsure of what is necessary,
-   just ask the <tt>GCC</tt> mailing list and we'll figure out what is best
-   for you.
-  </ul>
-
-  <p>Note:  Many of these forms have a place for &quot;name of program&quot;.
-  Insert the name of <b>one</b> program in that place--in this case,
-  &quot;gcc&quot;.
 
 <h2>Submitting Patches</h2>
 
