Fix a typo. By Jan van Male <jan.vanmale@fenk.wau.nl>.

--- a/htdocs/egcs-1.1/news.html
+++ b/htdocs/egcs-1.1/news.html
@@ -65,7 +65,7 @@ cpplib has been greatly improved.  It is probably useable for some sites now
 (major missing feature is trigraphs).
 
 Memory footprint for the compiler has been significantly reduced for certain
-pathalogical cases.
+pathological cases.
 
 Build time improvements for targets which support lots of sched parameters
 (alpha and mips primarily).
