2000-11-05  Toon Moene  <toon@moene.indiv.nluug.nl>
	* readings.html: Update Fortran information.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -312,6 +312,22 @@ tahoe. These are listed here just for completeness.
 
   </ul></li>
 
+  <li>Fortran standards information:
+
+  <ul>
+
+    <li><a href="http://www.j3-fortran.org/">Fortran standards committee</a>
+    (includes references to the current draft of the Fortran standard)</li>
+
+  </ul></li>
+
+  <li>Fortran historical information:
+
+  <ul>
+
+    <li><a href="http://www.fortran.com/F77_std/rjcnf.html">FORTRAN 77 Standard</a></li>
+
+  </ul></li>
 
   <li><a href="http://www.partner.europe.digital.com/www-swdev/pages/Home/TECH/dunix/ofst/build/src/index.html">
   Information on the Digital UNIX V5.0 object file format</a>
@@ -321,10 +337,6 @@ tahoe. These are listed here just for completeness.
   <li><a href="http://www.almaden.ibm.com/journal/">IBM Journal of Research and Development</a>
 
   <li><a href="http://www.esofta.com/softspecs.html">System V PowerPC ABI</a>
-
-  <li><a href="ftp://ftp.dfrc.nasa.gov/pub/x3j3/ncsa/doc/standing/007/">F2K draft</a>
-
-  <li><a href="http://www.fortran.com/F77_std/rjcnf.html">FORTRAN 77 Standard</a>
 
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
