--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -35,6 +35,10 @@
 
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.
 
+  <li><a href="http://reality.sgi.com/dehnert_engr/cxx/cxx-summary.html">
+  Multi-vendor standard C++ ABI</a> is the default in GCC releases 3.0 and
+  above.
+
 </ul>
 
 
