--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -128,6 +128,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
      this page is checked into CVS, which adds a level of complexity that
      is not currently handled well.  -->
 <td><select name=restrict multiple size=6>
+<option value="gcc/2000-11">Nov 2000
 <option value="gcc/2000-10">Oct 2000
 <option value="gcc/2000-09">Sep 2000
 <option value="gcc/2000-08">Aug 2000
@@ -168,6 +169,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-bugs/2000-11">Nov 2000
 <option value="gcc-bugs/2000-10">Oct 2000
 <option value="gcc-bugs/2000-09">Sep 2000
 <option value="gcc-bugs/2000-08">Aug 2000
@@ -208,6 +210,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-bugs/1997-09">Sep 1997
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-patches/2000-11">Nov 2000
 <option value="gcc-patches/2000-10">Oct 2000
 <option value="gcc-patches/2000-09">Sep 2000
 <option value="gcc-patches/2000-08">Aug 2000
@@ -240,6 +243,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-patches/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-help/2000-11">Nov 2000
 <option value="gcc-help/2000-10">Oct 2000
 <option value="gcc-help/2000-09">Sep 2000
 <option value="gcc-help/2000-08">Aug 2000
@@ -257,6 +261,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-help/1999-q3">Jul-Sep 1999
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-cvs/2000-11">Nov 2000
 <option value="gcc-cvs/2000-10">Oct 2000
 <option value="gcc-cvs/2000-09">Sep 2000
 <option value="gcc-cvs/2000-08">Aug 2000
@@ -289,6 +294,7 @@ Mailing lists, including those for the old egcs project.  Ticking a box is like 
 <option value="gcc-cvs/1998-05">May 1998
 </select></td>
 <td><select name=restrict multiple size=6>
+<option value="gcc-testresults/2000-11">Nov 2000
 <option value="gcc-testresults/2000-10">Oct 2000
 <option value="gcc-testresults/2000-09">Sep 2000
 <option value="gcc-testresults/2000-08">Aug 2000
