--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -7,12 +7,15 @@
 <body>
 <h1>Accessing the database</h1>
 
-<p>In order to manage PRs, you need an account on gcc.gnu.org, and a
-GNATS password, which is different from the authenticated access to
-the CVS repository. Also, when you manage PRs, make sure
-mail-forwarding from gcc.gnu.org to your normal email account is
-activated; otherwise replies to status change notifications will
-bounce.</p>
+<p>In order to manage PRs, you need an account for our GNATS database
+which is different from the authenticated access to the CVS repository
+(though the username will be the same). If you do not have a GNATS
+account yet (and think you should <CODE>;-)</CODE>) please contact
+overseers@gcc.gnu.org.</p>
+
+<p>Also, when you manage PRs, make sure mail-forwarding from
+gcc.gnu.org to your normal email account is activated; otherwise
+replies to status change notifications will bounce.</p>
 
 <p>You can access the database either via <a
 href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl">gnatsweb</a>, or via
