--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -54,6 +54,11 @@ on file.</p>
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).  They are not required
        for updates to the web pages.
+  <li> A list of targets where the patch survived a bootstrap of GCC.  A
+       bootstrap on least one host is required for any non-trivial change.
+       A full GCC testsuite run is also required.   With your patch, provide a 
+       list of hosts where the GCC testsuite was run, including an 
+       analysis of any regressions.
   <li> <p>The patch itself.  If you are accessing the <a href="cvs.html">
        CVS repository</a> at gcc.gnu.org, use 
        &quot;<code>cvs update; cvs diff -c3p</code>&quot;; else, use 
