Fix typos. By Jan van Male <jan.vanmale@fenk.wau.nl>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -189,7 +189,7 @@ It will also identify any files in your local tree that you have modified.
 file.  Use the current date/time for the <tt>ChangeLog</tt> entry, not
 the time that the patch was submitted.
 
-<li>Make sure to rebuild any generated files that would be effected by
+<li>Make sure to rebuild any generated files that would be affected by
 the patch.  Make sure to check them in along with the files explicitly
 modified by the patch.
 
