--- a/htdocs/egcs-1.1/features.html
+++ b/htdocs/egcs-1.1/features.html
@@ -51,7 +51,7 @@
 	performance tuning for Ultra class machines.  The SPARC port now
 	uses the Haifa scheduler.
 	<li> Alpha port has been tuned for the EV6 processor and has an
-	optimized expanstion of memcpy/bzero.  The Alpha port now uses
+	optimized expansion of memcpy/bzero.  The Alpha port now uses
 	the Haifa scheduler.
 	<li> RS6000/PowerPC: EGCS 1.1 includes support for the Power64
 	architecture and aix4.3 support.  The RS6000/PowerPC port now
