--- a/htdocs/libstdc++/footer.html
+++ b/htdocs/libstdc++/footer.html
@@ -10,9 +10,11 @@ These pages are stoically maintained by
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</a>, who might now
 actually be able to maintain them as the directory structure is slowly
 congealing into some kind of permanent structure, and were last modified on
-2000-11-03.
+2000-11-10.
 </EM></P>
 
 <!-- And this closes everything out. -->
-<!--#include virtual="/include/footer-subpages.html"-->
+<!--**POUND SIGN REMOVED**include virtual="/include/footer-subpages.html"-->
+</BODY>
+</HTML>
 
