Update and escape special character in URL.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -20,7 +20,7 @@ the conventions separately from any other changes to the code.</p>
 <p>There are strict requirements for portability of code in GCC to
 older systems whose compilers do not implement the ISO C standard.
 See <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/egcs/gcc/README.Portability?content-type=text/plain&only_with_tag=HEAD">README.Portability</a>
+href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/~checkout~/gcc/gcc/README.Portability?content-type=text/plain&amp;only_with_tag=HEAD">README.Portability</a>
 for details of some of the portability problems that may arise.  Some
 of these problems are warned about by <code>gcc -Wtraditional</code>,
 which is included in the default warning options in a bootstrap.
