Added *-*-linux-gnu section and glibc-2.2.patch

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -17,6 +17,7 @@ GNU Compiler Collection on your machine.</p>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
   <li><a href="#hppa*-hp-hpux10">hppa*-hp-hpux10</a></li>
   <li><a href="#hppa*-hp-hpux11">hppa*-hp-hpux11</a></li>
+  <li><a href="#*-*-linux-gnu">*-*-linux-gnu</a></li>
   <li><a href="#ix86-*-linux*">i?86-*-linux*</a></li>
   <li><a href="#ix86-*-sco3.2v5*">i?86-*-sco3.2v5*</a></li>
   <li><a href="#ix86-*-solaris*">i?86-*-solaris*</a></li>
@@ -162,7 +163,16 @@ HP-UX 11.</p>
 
  
 <hr>
+<h3><a name="*-*-linux-gnu">*-*-linux-gnu</a></h3>
+
+<p>If you use glibc 2.2 (or 2.1.9x), GCC 2.95.2 won't install
+out-of-the-box.  You'll get compile errors while building libstdc++.
+The patch <a href="glibc-2.2.patch">glibc-2.2.patch</a>, that is to be
+applied in the GCC source tree, fixes the compatibility problems.</p>
+
+<hr>
 <h3><a name="ix86-*-linux*">i?86-*-linux*</a></h3>
+
 <p>You will need binutils-2.9.1.0.15 or newer for exception handling to work.</p>
 
 <p>If you receive Signal 11 errors when building on GNU/Linux, then it is
