Update for new C99 features now supported in GCC.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -150,6 +150,21 @@ hope to release by the end of the year.
 
 <dl>
 
+<dt><b>November 13, 2000</b></dt>
+<dd>
+GCC now supports two more ISO C99 features:
+<ul>
+<li>The builtin boolean <code>_Bool</code> type and the
+<code>&lt;stdbool.h&gt;</code> header.  (GCC 2.95 had a non-conforming
+<code>&lt;stdbool.h&gt;</code> header; code that used that header will
+not be binary compatible with code using the new conforming
+version.)</li>
+<li>Mixed declarations and code in compound statements.  (However,
+<code>for (int i = 0; i &lt; 10; i++) /* ... */</code> isn't yet
+supported.)
+</ul>
+</dd>
+
 <dt><b>November 2, 2000</b></dt>
 <dd>
 The C, C++ and Objective C front-ends to GCC now use an integrated
