2000-11-16  Phil Edwards  <pme@sources.redhat.com>
	* Makefile:  New file, just rebuilds the text form of the FAQ
	  using suggestion from Joseph S. Myers.
	* ChangeLog:  New file.
	* footer.html:  Moved to...
	* footer.ihtml:  ...this.
	* header.html:  Moved to...
	* header.ihtml:  ...this.  Trimmed unneeded headers.

	* configopts.html:  Updated #included files, updated for 2.91.
	* documentation.html:  Ditto.
	* download.html:  Ditto.
	* index.html:  Ditto.
	* links.html:  Ditto.
	* mail.html:  Ditto.
	* status.html:  Ditto.
	* thanks.html:  Ditto.
	* gccrebuild.html:  Removed.
	* faq/index.txt:  Rebuilt.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -1,5 +1,5 @@
 
-<!--#include virtual="/libstdc++/header.html"-->
+<!--#include virtual="/libstdc++/header.ihtml"-->
 
 
 <H3>Getting the sources by FTP or CVS</H3>
@@ -40,5 +40,5 @@
 </P>
 
 
-<!--#include virtual="/libstdc++/footer.html"-->
+<!--#include virtual="/libstdc++/footer.ihtml"-->
 
