--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -1,10 +1,10 @@
 
-<!--#include virtual="/libstdc++/header.html"-->
+<!--#include virtual="/libstdc++/header.ihtml"-->
 
 
 <H2>What... is your name?</H2>
 
-<P>The GNU Standard C++ Library v3, or libstdc++-2.90.x.  Also,
+<P>The GNU Standard C++ Library v3, or libstdc++-2.90.x/2.9x.  Also,
    libstdc++-v3 is the most common nickname.
 </P>
 
@@ -28,12 +28,18 @@
 <H3>News</H3>
 <P>
 <DL>
+ <DT>2000-11-17
+ <DD> Tenth snapshot release, 
+   <A HREF="ftp://sources.redhat.com/pub/libstdc++/libstdc++-2.91.tar.gz">
+   libstdc++-2.91.tar.gz</A>.
+ <DT>2000-11-12
+ <DD> Officially
+   <A HREF="http://gcc.gnu.org/ml/gcc/2000-11/msg00522.html">made 
+   libstdc++-v3 the default C++ library</A>.
  <DT>2000-04-21
  <DD> Officially merged library sources into GCC.
  <DT>2000-03-24 
- <DD> Ninth snapshot release, 
-   <A HREF="ftp://sources.redhat.com/pub/libstdc++/libstdc++-2.90.8.tar.gz">
-      libstdc++-2.90.8.tar.gz</A>.
+ <DD> Ninth snapshot release, libstdc++-2.90.8.tar.gz.
  <DT>1999-12-21
  <DD> Eighth snapshot release, libstdc++-2.90.7.tar.gz.
  <DT>1999-08-04
@@ -59,5 +65,8 @@
 </P>
 
 
-<!--#include virtual="/libstdc++/footer.html"-->
+<!--#include virtual="/libstdc++/footer.ihtml"-->
+</BODY>
+</HTML>
+
 
