--- a/htdocs/libstdc++/links.html
+++ b/htdocs/libstdc++/links.html
@@ -1,5 +1,5 @@
 
-<!--#include virtual="/libstdc++/header.html"-->
+<!--#include virtual="/libstdc++/header.ihtml"-->
 
 
 
@@ -41,5 +41,8 @@ Public websites that have info on known defects in the standard:
 
 
 
-<!--#include virtual="/libstdc++/footer.html"-->
+<!--#include virtual="/libstdc++/footer.ihtml"-->
+</BODY>
+</HTML>
+
 
