--- a/htdocs/libstdc++/mail.html
+++ b/htdocs/libstdc++/mail.html
@@ -1,5 +1,5 @@
 
-<!--#include virtual="/libstdc++/header.html"-->
+<!--#include virtual="/libstdc++/header.ihtml"-->
 
 
 
@@ -47,9 +47,10 @@
 <P>Archives are also on the web for extra easy access.  Just select
    the links below to see the appropriate archive:
   <UL>
-  <LI><A HREF="/ml/libstdc++/">libstdc++</A> 
-  <LI><A HREF="/ml/libstdc++-cvs/">libstdc++-cvs</A> 
-  <LI><A HREF="/ml/libstdc++-prs/">libstdc++-prs</A> 
+  <!-- These need to be moved to gcc.gnu.org -->
+  <LI><A HREF="http://sources.redhat.com/ml/libstdc++/">libstdc++</A> 
+  <LI><A HREF="http://sources.redhat.com/ml/libstdc++-cvs/">libstdc++-cvs</A> 
+  <LI><A HREF="http://sources.redhat.com/ml/libstdc++-prs/">libstdc++-prs</A> 
   </UL>
 </P>
 
@@ -65,5 +66,8 @@
 
 
 
-<!--#include virtual="/libstdc++/footer.html"-->
+<!--#include virtual="/libstdc++/footer.ihtml"-->
+</BODY>
+</HTML>
+
 
