--- a/htdocs/libstdc++/documentation.html
+++ b/htdocs/libstdc++/documentation.html
@@ -1,8 +1,9 @@
 
-<!--#include virtual="/libstdc++/header.html"-->
+<!--#include virtual="/libstdc++/header.ihtml"-->
 
 <P><B>All of these documents</B> (in fact, this entire homepage set) are
-   bundled with the library source, under the <TT>docs</TT> subdirectory.
+   bundled with the library source, under the <TT>docs</TT> subdirectory,
+   for releases and snapshots.
 </P>
 
 <H2><A NAME="1">Introductory notes for libstdc++</A></H2>
@@ -42,7 +43,6 @@
       <UL>
         <A HREF="configopts.html">Configure options</A><BR>
         <A HREF="install.html">Getting started: configure, build, install</A><BR>
-        <A HREF="gccrebuild.html">Rebuilding libgcc for ABI-breaking flags</A><BR>
       </UL>
 
 <HR>
@@ -63,5 +63,8 @@
       </OL>
 
 
-<!--#include virtual="/libstdc++/footer.html"-->
+<!--#include virtual="/libstdc++/footer.ihtml"-->
+</BODY>
+</HTML>
+
 
