--- a/htdocs/libstdc++/configopts.html
+++ b/htdocs/libstdc++/configopts.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <HTML>
 <HEAD>
-   <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
    <META NAME="AUTHOR" CONTENT="pme@sources.redhat.com (Phil Edwards)">
    <META NAME="KEYWORDS" CONTENT="libstdc++, libstdc++-v3, GCC, g++">
    <META NAME="DESCRIPTION" CONTENT="Configuration options for libstdc++-v3.">
@@ -9,7 +8,7 @@
    <TITLE>libstdc++-v3 configure options</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: configopts.html,v 1.16 2000/11/01 21:38:32 bkoz Exp $ -->
+<!-- $Id: configopts.html,v 1.17 2000/11/16 20:59:15 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -169,7 +168,7 @@ options</A></H1>
 
 <HR>
 <P CLASS="fineprint"><EM>
-$Id: configopts.html,v 1.16 2000/11/01 21:38:32 bkoz Exp $
+$Id: configopts.html,v 1.17 2000/11/16 20:59:15 pme Exp $
 </EM></P>
 
 
