2000-11-16  Phil Edwards  <pme@sources.redhat.com>
	* header.ihtml:  Move main body tags out of here...
	* footer.ihtml:  ...and here...
	* documentation.html:  ...into here,
	* download.html:  and here,
	* index.html:  and here,
	* links.html:  and here,
	* mail.html:  and here,
	* status.html:  and here,
	* thanks.html:  and here.
	* faq/index.html:  Update for v3-is-the-default and 2.91 snapshot.
	* faq/index.txt:  Regenerated.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -1,3 +1,12 @@
+<HTML>
+<HEAD>
+ <META NAME="KEYWORDS" CONTENT="libstdc++, homepage, home, g++, libg++, STL">
+ <TITLE>Standard C++ Library v3</TITLE>
+<LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
+<LINK REL=StyleSheet HREF="lib3styles.css">
+<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+</HEAD>
+<BODY>
 
 <!--#include virtual="/libstdc++/header.ihtml"-->
 
@@ -41,4 +50,6 @@
 
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
+</BODY>
+</HTML>
 
